LU-3841 lod: handle released defined layouts

In lod_use_defined_striping() covert layout magic to non _DEF form
before passing to lov_mds_md_size() and check that the supplied buffer
is sufficiently large only after accounting for released layouts.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Ic5fdebaf0bc4a9327d6f5bba1be048bb033b1d3a
Reviewed-on: http://review.whamcloud.com/7467
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>